Add visitor, fork, star, watcher badges

--- a/index.html
+++ b/index.html
@@ -243,6 +243,13 @@
         <header>
             <h1>US MILITARY STRIKES ON VENEZUELA</h1>
             <p style="font-size: 1.2rem;">January 3, 2026 - BREAKING NEWS</p>
+            <div style="margin-top: 15px; display: flex; justify-content: center; gap: 10px; flex-wrap: wrap;">
+                <img src="https://visitor-badge.laobi.icu/badge?page_id=Ringmast4r.Venezuela" alt="Visitors">
+                <img src="https://img.shields.io/github/forks/Ringmast4r/Venezuela?style=social" alt="Forks">
+                <img src="https://img.shields.io/github/stars/Ringmast4r/Venezuela?style=social" alt="Stars">
+                <img src="https://img.shields.io/github/watchers/Ringmast4r/Venezuela?style=social" alt="Watchers">
+                <img src="https://img.shields.io/github/repo-size/Ringmast4r/Venezuela" alt="Repo Size">
+            </div>
         </header>
 
         <div class="breaking">
