Update: Verified info, Padrino Lopez status unclear, FAA flight ban, Colombia troops, VP demands proof of life

--- a/index.html
+++ b/index.html
@@ -368,18 +368,28 @@
         </div>
 
         <div class="section">
-            <h2>Confirmed Killed</h2>
+            <h2>Key Figures Status</h2>
             <table>
-                <tr><th>Name</th><th>Position</th><th>How</th></tr>
+                <tr><th>Name</th><th>Position</th><th>Status</th></tr>
+                <tr>
+                    <td><strong>Nicolas Maduro</strong></td>
+                    <td>President</td>
+                    <td><span class="status-captured">CAPTURED</span> (per Trump) - VP demands proof of life</td>
+                </tr>
+                <tr>
+                    <td><strong>Cilia Flores</strong></td>
+                    <td>First Lady</td>
+                    <td><span class="status-captured">CAPTURED</span> (per Trump)</td>
+                </tr>
                 <tr>
                     <td><strong>Vladimir Padrino Lopez</strong></td>
                     <td>Defense Minister</td>
-                    <td><span class="status-killed">US airstrike on his home</span></td>
+                    <td><span class="status-confirmed">UNCLEAR</span> - conflicting reports</td>
                 </tr>
                 <tr>
-                    <td>Several senior officials</td>
-                    <td>Maduro administration</td>
-                    <td>Strikes (details unconfirmed)</td>
+                    <td><strong>Delcy Rodriguez</strong></td>
+                    <td>Vice President</td>
+                    <td>Active - demanding proof of life</td>
                 </tr>
             </table>
         </div>
@@ -453,8 +463,19 @@
         <div class="section">
             <h2>Venezuelan Government Demands</h2>
             <blockquote>
-                <strong>Vice President Delcy Rodriguez</strong> has issued a demand for <strong>proof of life</strong> and the location of President Nicolás Maduro after Trump's announcement.
+                <strong>Vice President Delcy Rodriguez:</strong> "We do not know where President Nicolás Maduro and First Lady Cilia Flores are. <strong>We demand proof of life.</strong>"
             </blockquote>
+        </div>
+
+        <div class="section">
+            <h2>Latest Verified Developments</h2>
+            <ul>
+                <li><strong>FAA</strong> banned all flights over Venezuela due to "potentially dangerous situation"</li>
+                <li><strong>US Embassy in Colombia</strong> issued stay-at-home order for Americans in Venezuela</li>
+                <li><strong>Senate Armed Services Committee</strong> was NOT informed in advance of military action</li>
+                <li><strong>Colombia</strong> deployed additional troops along border with Venezuela</li>
+                <li><strong>Polish PM Donald Tusk:</strong> "US strikes on Venezuela will have consequences around the world"</li>
+            </ul>
         </div>
 
         <div class="section">
